--- a/html/index.html
+++ b/html/index.html
@@ -20,10 +20,10 @@
                         <a href="index.html" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item active">
-                        <a href="contact.html" class="nav-link">Contact</a>
+                        <a href="html/contact.html" class="nav-link">Contact</a>
                     </li>
                     <li class="nav-item active">
-                        <a href="about.html" class="nav-link">About</a>
+                        <a href="html/about.html" class="nav-link">About</a>
                     </li>
                 </ul>
             </div>
