--- a/html/about.html
+++ b/html/about.html
@@ -17,7 +17,7 @@
             <div class="Options"></div>
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a href="index.html" class="nav-link">Home</a>
+                        <a href="../index.html" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item active">
                         <a href="contact.html" class="nav-link">Contact</a>
